--- a/sys/Makefile.include
+++ b/sys/Makefile.include
@@ -10,6 +10,9 @@ endif
 ifneq (,$(filter tcp,$(USEMODULE)))
     USEMODULE_INCLUDES += $(RIOTBASE)/sys/net/include
 endif
+ifneq (,$(filter ng_tcp,$(USEMODULE)))
+    USEMODULE_INCLUDES += $(RIOTBASE)/sys/include/net
+endif
 ifneq (,$(filter udp,$(USEMODULE)))
     USEMODULE_INCLUDES += $(RIOTBASE)/sys/net/include
 endif
