NRF51822 BLE radio driver (nrfmin)

--- a/cpu/nrf51/Makefile
+++ b/cpu/nrf51/Makefile
@@ -9,4 +9,9 @@ ifneq (,$(filter radio_nrfmin,$(USEMODULE)))
     DIRS += radio/nrfmin
 endif
 
+# build one of the radio drivers, if enabled
+ifneq (,$(filter radio_blemin,$(USEMODULE)))
+    DIRS += radio/blemin
+endif
+
 include $(RIOTBASE)/Makefile.base
