cpu/make.cortexm: s/startup.o/vectors.o/

--- a/cpu/Makefile.include.cortexm_common
+++ b/cpu/Makefile.include.cortexm_common
@@ -33,7 +33,7 @@ export INCLUDES += -I$(RIOTCPU)/$(CPU)/include
 # Explicitly tell the linker to link the startup code.
 #   Without this the interrupt vectors will not be linked correctly!
 ifeq ($(COMMON_STARTUP),)
-export UNDEF += $(BINDIR)cpu/startup.o
+export UNDEF += $(BINDIR)cpu/vectors.o
 endif
 
 # CPU depends on the cortex-m common module, so include it:
