boards/pba-d-01-kwx: ng_netif to ng_netif_default

--- a/boards/pba-d-01-kw2x/Makefile.dep
+++ b/boards/pba-d-01-kw2x/Makefile.dep
@@ -1,4 +1,4 @@
-ifneq (,$(filter ng_netif,$(USEMODULE)))
+ifneq (,$(filter ng_netif_default,$(USEMODULE)))
   USEMODULE += kw2xrf
   USEMODULE += ng_nomac
 endif
