--- a/cpu/k60/Makefile.include
+++ b/cpu/k60/Makefile.include
@@ -23,7 +23,7 @@ export CFLAGS += -DCPU_ARCH_$(ARCH)
 export COMMON_STARTUP = $(KINETIS_COMMON)
 
 # add the CPU specific system calls implementations for the linker
-export UNDEF += $(BINDIR)cpu/interrupt_vector.o
+export UNDEF += $(BINDIR)cpu/vector.o
 export UNDEF += $(BINDIR)cpu/ssp.o
 
 include $(RIOTCPU)/Makefile.include.cortexm_common
