tests: adjusted test to changed GPIO interface

--- a/tests/driver_kw2xrf/Makefile
+++ b/tests/driver_kw2xrf/Makefile
@@ -27,22 +27,22 @@ ifneq (true,$(USE_BOARD_PARAMETERS))
 ifneq (,$(KWRF_SHARED_SPI))
   CFLAGS += -DKW2XRF_SHARED_SPI=$(DKW2XRF_SHARED_SPI)
 else
-  CFLAGS += -DKW2XRFD_SHARED_SPI=1  # activate spi-lock
+  CFLAGS += -DKW2XRFD_SHARED_SPI=1      # activate spi-lock
 endif
 ifneq (,$(KWRF_SPI))
   CFLAGS += -DKWRF_SPI=$(KWRF_SPI)
 else
-  CFLAGS += -DKWRF_SPI=SPI_0        # set default
+  CFLAGS += -DKWRF_SPI=SPI_0            # set default
 endif
 ifneq (,$(KWRF_CS))
   CFLAGS += -DKWRF_CS=$(KWRF_CS)
 else
-  CFLAGS += -DKWRF_CS=GPIO_0        # set default
+  CFLAGS += -DKWRF_CS=GPIO\(0,0\)       # set default
 endif
 ifneq (,$(KWRF_INT))
   CFLAGS += -DKWRF_INT=$(KWRF_INT)
 else
-  CFLAGS += -DKWRF_INT=GPIO_1       # set default
+  CFLAGS += -DKWRF_INT=GPIO\(0,1\)      # set default
 endif
 ifneq (,$(KWRF_SPI_SPEED))
   CFLAGS += -DKWRF_SPI_SPEED=$(KWRF_SPI_SPEED)
