adding ng_sniffer/sniffer functionality (wireshark support)

--- a/boards/yunjia-nrf51822/Makefile.include
+++ b/boards/yunjia-nrf51822/Makefile.include
@@ -14,3 +14,5 @@ include $(RIOTBOARD)/Makefile.include.openocd
 
 # include cortex defaults
 include $(RIOTBOARD)/Makefile.include.cortexm_common
+
+include $(RIOTBOARD)/$(BOARD)/Makefile.dep
