--- a/cpu/nrf51822/Makefile
+++ b/cpu/nrf51822/Makefile
@@ -3,5 +3,8 @@ MODULE = cpu
 
 # add a list of subdirectories, that should also be build
 DIRS = periph $(CORTEX_COMMON)
+ifneq (,$(filter ng_ble,$(USEMODULE)))
+	DIRS += ng_ble
+endif
 
 include $(RIOTBASE)/Makefile.base
