--- a/boards/yunjia-nrf51822/Makefile.features
+++ b/boards/yunjia-nrf51822/Makefile.features
@@ -1,6 +1,6 @@
 FEATURES_PROVIDED += cpp
 FEATURES_PROVIDED += radio_nrfmin
-FEATURES_PROVIDED += radio_blemin
+FEATURES_PROVIDED += nrf51_ble
 FEATURES_PROVIDED += periph_uart
 FEATURES_PROVIDED += periph_gpio
 FEATURES_PROVIDED += periph_random
