--- a/Makefile.pseudomodules
+++ b/Makefile.pseudomodules
@@ -10,6 +10,9 @@ PSEUDOMODULES += log_printfnoformat
 PSEUDOMODULES += newlib
 PSEUDOMODULES += pktqueue
 
+# include peripheral drivers
+PSEUDOMODULES += periph_%
+
 # include variants of the AT86RF2xx drivers as pseudo modules
 PSEUDOMODULES += at86rf23%
 PSEUDOMODULES += at86rf21%
