--- a/boards/nucleo-f303/Makefile.features
+++ b/boards/nucleo-f303/Makefile.features
@@ -1,4 +1,5 @@
 FEATURES_PROVIDED += cpp
+FEATURES_PROVIDED += periph_timer
 FEATURES_PROVIDED += periph_cpuid
 FEATURES_PROVIDED += periph_gpio
 FEATURES_PROVIDED += periph_pwm
