--- a/boards/saml21-xpro/Makefile.include
+++ b/boards/saml21-xpro/Makefile.include
@@ -3,6 +3,9 @@ export CPU = saml21
 export CPU_MODEL = saml21j18a
 export CFLAGS += -D__SAML21J18A__
 
+# the board is using the peripheral GPIO driver for controlling it's LEDs
+USEMODULE += periph_gpio
+
 # include dependencies
 include $(RIOTBOARD)/$(BOARD)/Makefile.dep
 
