drivers: added Makefile.dep for drivers

--- a/Makefile.dep
+++ b/Makefile.dep
@@ -1,3 +1,6 @@
+# pull dependencies from drivers
+include $(RIOTBASE)/drivers/Makefile.dep
+
 ifneq (,$(filter gnrc_%,$(filter-out gnrc_netapi gnrc_netreg gnrc_netif% gnrc_pktbuf,$(USEMODULE))))
   USEMODULE += gnrc
 endif
@@ -20,6 +23,7 @@ ifneq (,$(filter xbee,$(USEMODULE)))
 endif
 
 ifneq (,$(filter gnrc_zep,$(USEMODULE)))
+  USEMODULE += periph_uart
   USEMODULE += hashes
   USEMODULE += ieee802154
   USEMODULE += gnrc_udp
@@ -257,4 +261,12 @@ endif
 
 ifneq (,$(filter hih6130,$(USEMODULE)))
   USEMODULE += vtimer
+endif
+
+ifneq (,$(filter uart_stdio,$(USEMODULE)))
+  USEMODULE += periph_uart
+endif
+
+ifneq (,$(filter hwtimer_compat,$(USEMODULE)))
+  USEMODULE += periph_timer
 endif
