--- a/boards/yunjia-nrf51822/Makefile.dep
+++ b/boards/yunjia-nrf51822/Makefile.dep
@@ -1,4 +1,4 @@
-ifneq (,$(filter ng_netif,$(USEMODULE)))
+ifneq (,$(filter ng_netif_default,$(USEMODULE)))
   USEMODULE += nrf51_ble
   USEMODULE += ng_nomac
 endif
