--- a/tests/driver_blemin/Makefile
+++ b/tests/driver_blemin/Makefile
@@ -3,6 +3,8 @@ include ../Makefile.tests_common
 
 BOARD = yunjia-nrf51822
 
+FEATURES_REQUIRED = nrf51_ble
+
 USEMODULE += shell
 USEMODULE += shell_commands
 USEMODULE += ps
@@ -11,5 +13,6 @@ USEMODULE += nrf51_ble
 USEMODULE += gnrc
 USEMODULE += gnrc_nomac
 USEMODULE += gnrc_pktdump
+USEMODULE += ble_ll
 
 include $(RIOTBASE)/Makefile.include
