ng_sniffer: added ng_netif_default
This application was not adapted to
https://github.com/RIOT-OS/RIOT/pull/3162 and
https://github.com/RIOT-OS/RIOT/pull/3188

--- a/ng_sniffer/Makefile
+++ b/ng_sniffer/Makefile
@@ -8,7 +8,7 @@ BOARD ?= native
 RIOTBASE ?= $(CURDIR)/../../RIOT
 
 # Define modules that are used
-USEMODULE += ng_netif
+USEMODULE += ng_netif_default
 USEMODULE += auto_init_ng_netif
 USEMODULE += uart0
 USEMODULE += shell
