--- a/Makefile.dep
+++ b/Makefile.dep
@@ -240,6 +240,15 @@ ifneq (,$(filter aodvv2,$(USEMODULE)))
   USEMODULE += fib
 endif
 
+ifneq (,$(filter newlib,$(USEMODULE)))
+  USEMODULE += uart_stdio
+else
+  ifneq (,$(filter shell,$(USEMODULE)))
+    USEMODULE += uart0
+  endif
+endif
+
+
 ifneq (,$(filter uart0,$(USEMODULE)))
   USEMODULE += posix
 endif
@@ -337,10 +346,6 @@ ifneq (,$(filter cpp11-compat,$(USEMODULE)))
   USEMODULE += vtimer
   USEMODULE += timex
   FEATURES_REQUIRED += cpp
-endif
-
-ifneq (,$(filter newlib,$(USEMODULE)))
-  USEMODULE += uart_stdio
 endif
 
 ifneq (,$(filter hih6130,$(USEMODULE)))
