--- a/cpu/stm32f0/Makefile.include
+++ b/cpu/stm32f0/Makefile.include
@@ -4,6 +4,6 @@ export CPU_ARCH = cortex-m0
 USEMODULE += hwtimer_compat
 
 # use common periph functions
-USEMODULE += periph_common
+USEMODULE += periphdri_common
 
 include $(RIOTCPU)/Makefile.include.cortexm_common
