--- a/drivers/Makefile.dep
+++ b/drivers/Makefile.dep
@@ -11,6 +11,9 @@ ifneq (,$(filter at86rf2%,$(USEMODULE)))
   USEMODULE += ieee802154
   USEMODULE += periph_gpio
   USEMODULE += periph_spi
+  ifneq (,$(filter periph_cpuid,$(FEATURES_PROVIDED)))
+    USEMODULE += periph_cpuid
+  endif
 endif
 
 ifneq (,$(filter dht,$(USEMODULE)))
@@ -34,8 +37,12 @@ ifneq (,$(filter isl29125,$(USEMODULE)))
 endif
 
 ifneq (,$(filter kw2xrf,$(USEMODULE)))
+  USEMODULE += ieee802154
   USEMODULE += periph_gpio
-  USEMODULE += ng_ieee802154
+  USEMODULE += periph_spi
+  ifneq (,$(filter periph_cpuid,$(FEATURES_PROVIDED)))
+    USEMODULE += periph_cpuid
+  endif
 endif
 
 ifneq (,$(filter l3g4200d,$(USEMODULE)))
