--- a/boards/ellduino/Makefile.include
+++ b/boards/ellduino/Makefile.include
@@ -2,49 +2,15 @@
 export CPU = stm32f0
 export CPU_MODEL = stm32f051r8
 
-#define the default port depending on the host OS
-OS := $(shell uname)
-ifeq ($(OS),Linux)
-  PORT ?= /dev/ttyUSB0
-else ifeq ($(OS),Darwin)
-  PORT ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
-else
-  $(info CAUTION: No flash tool for your host system found!)
-  # TODO: add support for windows as host platform
-endif
-export PORT
+# define the default port depending on the host OS
+PORT_LINUX ?= /dev/ttyUSB0
+PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
 
-# define tools used for building the project
-export PREFIX = arm-none-eabi-
-export CC = $(PREFIX)gcc
-export AR = $(PREFIX)ar
-export AS = $(PREFIX)as
-export LINK = $(PREFIX)gcc
-export SIZE = $(PREFIX)size
-export OBJCOPY = $(PREFIX)objcopy
-export TERMPROG = $(RIOTBASE)/dist/tools/pyterm/pyterm
-export FLASHER = stm32flash
-export DEBUGGER = $(RIOTBOARD)/$(BOARD)/dist/debug.sh
-export DEBUGSERVER = st-util
+# setup serial terminal
+include $(RIOTBOARD)/Makefile.include.serial
 
-# define build specific options
-CPU_USAGE = -mcpu=cortex-m0
-FPU_USAGE =
-export CFLAGS += -ggdb -g3 -std=gnu99 -Os -Wall -Wstrict-prototypes $(CPU_USAGE) $(FPU_USAGE) -mlittle-endian -mthumb -mthumb-interwork -nostartfiles
-export CFLAGS += -ffunction-sections -fdata-sections -fno-builtin
-export ASFLAGS += -ggdb -g3 $(CPU_USAGE) $(FPU_USAGE) -mlittle-endian
-export LINKFLAGS += -g3 -ggdb -std=gnu99 $(CPU_USAGE) $(FPU_USAGE) -mlittle-endian -static -lgcc -mthumb -mthumb-interwork -nostartfiles
-# $(LINKERSCRIPT) is specified in cpu/Makefile.include
-export LINKFLAGS += -T$(LINKERSCRIPT)
-export OFLAGS = -O binary
-export FFLAGS = -w bin/$(BOARD)/$(APPLICATION).hex $(PORT)
-export DEBUGGER_FLAGS = $(RIOTBOARD)/$(BOARD)/dist/gdb.conf bin/$(BOARD)/$(APPLICATION).elf
-export TERMFLAGS += -p "$(PORT)"
+# this board uses openocd
+include $(RIOTBOARD)/Makefile.include.openocd
 
-# use the nano-specs of the NewLib when available
-ifeq ($(shell $(LINK) -specs=nano.specs -E - 2>/dev/null >/dev/null </dev/null ; echo $$?),0)
-export LINKFLAGS += -specs=nano.specs -lc -lnosys
-endif
-
-# export board specific includes to the global includes-listing
-export INCLUDES += -I$(RIOTBOARD)/$(BOARD)/include
+# include cortex defaults
+include $(RIOTBOARD)/Makefile.include.cortexm_common
