cc3200 flash with Energia cc3200prog

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ cachegrind.out*
 # Eclipse symbol file (output from make eclipsesym)
 eclipsesym.xml
 /toolchain
+
+#ccsstudio
+.ccsproject
+.launches
+targetConfigs
+.gitignore
