--- a/sys/net/gnrc/Makefile
+++ b/sys/net/gnrc/Makefile
@@ -106,6 +106,9 @@ endif
 ifneq (,$(filter gnrc_udp,$(USEMODULE)))
     DIRS += transport_layer/udp
 endif
+ifneq (,$(filter gnrc_tcp,$(USEMODULE)))
+    DIRS += transport_layer/tcp
+endif
 ifneq (,$(filter gnrc_zep,$(USEMODULE)))
     DIRS += application_layer/zep
 endif
