--- a/tests/unittests/tests-ipv6/Makefile.include
+++ b/tests/unittests/tests-ipv6/Makefile.include
@@ -1,4 +1,4 @@
-USEMODULE += ng_ipv6
+USEMODULE += gnrc_ipv6
 
-USEMODULE += ng_icmpv6
-USEMODULE += ng_ndp
+USEMODULE += gnrc_icmpv6
+USEMODULE += gnrc_ndp
