--- a/cpu/cc3200/Makefile.include
+++ b/cpu/cc3200/Makefile.include
@@ -60,7 +60,7 @@ export INCLUDES += -I$(RIOTCPU)/$(CPU)/include
 # Explicitly tell the linker to link the startup code.
 #   Without this the interrupt vectors will not be linked correctly!
 ifeq ($(COMMON_STARTUP),)
-export UNDEF += $(BINDIR)cpu/startup_gcc.o
+export UNDEF += $(BINDIR)cpu/startup.o
 endif
 
 export LINKFLAGS += --entry ResetISR
