s make: fixed Makefile dep

--- a/drivers/Makefile.dep
+++ b/drivers/Makefile.dep
@@ -127,5 +127,5 @@ endif
 ifneq (,$(filter xbee,$(USEMODULE)))
   USEMODULE += periph_gpio
   USEMODULE += periph_uart
-  USEMODULE += ng_ieee802154
+  USEMODULE += ieee802154
 endif
