--- a/boards/cc3200-launchxl/Makefile.include
+++ b/boards/cc3200-launchxl/Makefile.include
@@ -8,7 +8,9 @@ include $(RIOTBOARD)/Makefile.include.serial
 
 # debugger config
 export DEBUGGER = $(RIOTBOARD)/$(BOARD)/dist/debug.sh
-export DEBUGSERVER = JLinkGDBServer -device CC3200
+
+#export DEBUGSERVER = JLinkGDBServer -device CC3200
+
 export RESET = $(RIOTBOARD)/$(BOARD)/dist/reset.sh
 
 # Define the flash-tool and default port:
@@ -20,14 +22,15 @@ ifeq ($(PROGRAMMER),openocd)
 else ifeq ($(PROGRAMMER),cc3200prog)
 
   export ENERGIA_ROOT?=/opt/energia-0101E0016/
+  export UART_PORT?=29 # lanchpad default port seems to be COM29
+
   export FLASHER = $(RIOTBOARD)/$(BOARD)/dist/flash.sh
   export FFLAGS  = $(ENERGIA_ROOT) $(PORT) $(HEXFILE)
-
 endif
 
 export OFLAGS    = -O binary --gap-fill 0xff
 export HEXFILE = $(ELFFILE:.elf=.bin)
-export DEBUGGER_FLAGS = $(BINDIR) $(ELFFILE)
+export DEBUGGER_FLAGS = $(RIOTBOARD)/$(BOARD)/dist $(ELFFILE)
 export RESET_FLAGS = $(BINDIR)
 
 export OBJDUMPFLAGS += --disassemble --source --disassembler-options=force-thumb
