init changes to allow changing optimization level

--- a/Makefile.vars
+++ b/Makefile.vars
@@ -38,6 +38,7 @@ export OFLAGS                # The parameter for OBJCOPY, e.g. to strip the debu
 export SIZE                  # The command to read to size of the ELF sections.
 export UNDEF                 # Set by the BOARD's and CPU's Makefile.include, this contains object files with must not be used in the ELFFILE even if the if no call to the functions.
 export WERROR                # Treat all compiler warnings as errors if set to 1 (see -Werror flag in GCC manual)
+export OPTIMIZE_LVL          # Sets the compilers optimization level
 
 export FLASHER               # The command to call on "make flash".
 export FFLAGS                # The parameters to supply to FLASHER.
