--- a/examples/hello-world/Makefile
+++ b/examples/hello-world/Makefile
@@ -4,6 +4,9 @@ APPLICATION = hello-world
 # If no BOARD is found in the environment, use this default:
 BOARD ?= native
 
+# Optimazation Level desired
+OPTIMIZE_LVL ?= 0
+
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../..
 
