--- a/boards/z1/Makefile.include
+++ b/boards/z1/Makefile.include
@@ -8,6 +8,9 @@ PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
 # setup serial terminal
 include $(RIOTBOARD)/Makefile.include.serial
 
+# setup the boards dependencies
+include $(RIOTBOARD)/$(BOARD)/Makefile.dep
+
 # setup flash tool
 export OFLAGS = -O ihex
 export FLASHER = $(RIOTBASE)/dist/tools/goodfet/goodfet.bsl
