--- a/examples/hello-world/Makefile
+++ b/examples/hello-world/Makefile
@@ -5,7 +5,7 @@ APPLICATION = hello-world
 BOARD ?= native
 
 # Optimazation Level desired
-OPTIMIZE_LVL ?= g
+OPTIMIZE_LVL ?= 0
 
 # This has to be the absolute path to the RIOT base directory:
 RIOTBASE ?= $(CURDIR)/../..
