--- a/Makefile.pseudomodules
+++ b/Makefile.pseudomodules
@@ -23,3 +23,5 @@ PSEUDOMODULES += netif
 # include variants of the AT86RF2xx drivers as pseudo modules
 PSEUDOMODULES += at86rf23%
 PSEUDOMODULES += at86rf21%
+
+PSEUDOMODULES += usbdev-acm
