--- a/boards/cc3200-launchxl/Makefile.include
+++ b/boards/cc3200-launchxl/Makefile.include
@@ -11,7 +11,7 @@ export DEBUGGER = $(RIOTBOARD)/$(BOARD)/dist/debug.sh
 
 # board unit test using gdb
 export BOARD_TEST_SCRIPT = $(RIOTBOARD)/$(BOARD)/dist/board_test.sh
-export TEST_SUITE ?= hwtimer
+export TEST_SUITE ?= suite
 
 export RESET = $(RIOTBOARD)/$(BOARD)/dist/reset.sh
 
