--- a/cpu/kinetis_common/Makefile.include
+++ b/cpu/kinetis_common/Makefile.include
@@ -5,6 +5,7 @@ export INCLUDES += -I$(RIOTCPU)/kinetis_common/include
 export LINKFLAGS += -L$(RIOTCPU)/kinetis_common/ldscripts
 
 # add the CPU specific code for the linker
+export UNDEF += $(BINDIR)kinetis_common/uart.o
 export UNDEF += $(BINDIR)kinetis_common/fcfield.o
 
 # Define a recipe to build the watchdog disable binary, used when flashing
