--- a/drivers/cc3200sdk/netapps/Makefile
+++ b/drivers/cc3200sdk/netapps/Makefile
@@ -1,3 +1,9 @@
-DIRS += mqtt
+
+ifneq (,$(filter cc3200sdk_httpserver,$(USEMODULE)))
+ DIRS += http
+endif
+ifneq (,$(filter cc3200sdk_mqtt_client,$(USEMODULE)))
+ DIRS += mqtt
+endif
 
 include $(RIOTBASE)/Makefile.base
