--- a/drivers/Makefile.include
+++ b/drivers/Makefile.include
@@ -66,3 +66,24 @@ ifneq (,$(filter cc3200sdk_mqtt_client,$(USEMODULE)))
     USEMODULE += cc3200sdk_mqtt_platform
 
 endif
+ifneq (,$(filter cc3200sdk_simplelink,$(USEMODULE)))
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/simplelink/include
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/simplelink
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/driverlib
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/inc
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/oslib
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/middleware/driver
+
+    CFLAGS += -DSL_PLATFORM_MULTI_THREADED
+
+    USEMODULE += cc3200sdk
+    USEMODULE += cc3200sdk_simplelink_source
+    USEMODULE += cc3200sdk_oslib
+endif
+ifneq (,$(filter cc3200sdk_driverlib,$(USEMODULE)))
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/driverlib
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/inc
+
+    USEMODULE += cc3200sdk
+
+endif
