--- a/drivers/Makefile.include
+++ b/drivers/Makefile.include
@@ -66,7 +66,8 @@ ifneq (,$(filter cc3200sdk_mqtt_client,$(USEMODULE)))
     USEMODULE += cc3200sdk_mqtt_platform
 
 endif
-ifneq (,$(filter cc3200sdk_simplelink,$(USEMODULE)))
+ifneq (,$(filter cc3200sdk_driverlib,$(USEMODULE)))
+    $(info $(USEMODULE))
     USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/simplelink/include
     USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/simplelink
     USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/driverlib
@@ -79,11 +80,4 @@ ifneq (,$(filter cc3200sdk_simplelink,$(USEMODULE)))
     USEMODULE += cc3200sdk
     USEMODULE += cc3200sdk_simplelink_source
     USEMODULE += cc3200sdk_oslib
-endif
-ifneq (,$(filter cc3200sdk_driverlib,$(USEMODULE)))
-    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/driverlib
-    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc3200sdk/inc
-
-    USEMODULE += cc3200sdk
-
 endif
