--- a/boards/cc3200-launchxl/Makefile.features
+++ b/boards/cc3200-launchxl/Makefile.features
@@ -4,4 +4,4 @@ FEATURES_PROVIDED += periph_gpio
 FEATURES_PROVIDED += periph_random
 FEATURES_PROVIDED += periph_cpuid
 FEATURES_PROVIDED += periph_timer
-FEATURES_MCU_GROUP = cortex_m3_1
+FEATURES_MCU_GROUP = cortex_m4
