sys/uart: add uart driver subsystem

--- a/sys/Makefile
+++ b/sys/Makefile
@@ -75,6 +75,10 @@ ifneq (,$(filter sem,$(USEMODULE)))
     DIRS += sem
 endif
 
+ifneq (,$(filter uart,$(USEMODULE)))
+    DIRS += uart
+endif
+
 DIRS += $(dir $(wildcard $(addsuffix /Makefile, ${USEMODULE})))
 
 include $(RIOTBASE)/Makefile.base
