cpu: s/periph_common/periphdri_common/

--- a/cpu/lpc11u34/Makefile.include
+++ b/cpu/lpc11u34/Makefile.include
@@ -1,5 +1,5 @@
 export CPU_ARCH = cortex-m0
 
-USEMODULE += periph_common
+USEMODULE += common_periph
 
 include $(RIOTCPU)/Makefile.include.cortexm_common
