--- a/cpu/samd21/Makefile.include
+++ b/cpu/samd21/Makefile.include
@@ -4,6 +4,6 @@ export CPU_ARCH = cortex-m0plus
 export CFLAGS += -DDONT_USE_CMSIS_INIT
 
 # use common periph functions
-USEMODULE += periph_common
+USEMODULE += common_periph
 
 include $(RIOTCPU)/Makefile.include.cortexm_common
