--- a/drivers/Makefile.include
+++ b/drivers/Makefile.include
@@ -46,6 +46,9 @@ endif
 ifneq (,$(filter encx24j600,$(USEMODULE)))
     USEMODULE_INCLUDES += $(RIOTBASE)/drivers/encx24j600/include
 endif
+ifneq (,$(filter ksz8851snl,$(USEMODULE)))
+    USEMODULE_INCLUDES += $(RIOTBASE)/drivers/ksz8851snl/include
+endif
 ifneq (,$(filter tcs37727,$(USEMODULE)))
     USEMODULE_INCLUDES += $(RIOTBASE)/drivers/tcs37727/include
 endif
