--- a/drivers/Makefile.dep
+++ b/drivers/Makefile.dep
@@ -20,6 +20,7 @@ ifneq (,$(filter dht,$(USEMODULE)))
 endif
 
 ifneq (,$(filter encx24j600,$(USEMODULE)))
+  USEMODULE += gnrc_netdev2
   USEMODULE += xtimer
 endif
 
