--- a/sys/net/gnrc/Makefile
+++ b/sys/net/gnrc/Makefile
@@ -7,6 +7,9 @@ endif
 ifneq (,$(filter gnrc_conn_udp,$(USEMODULE)))
     DIRS += conn/udp
 endif
+ifneq (,$(filter gnrc_csma_sender,$(USEMODULE)))
+    DIRS += link_layer/csma_sender
+endif
 ifneq (,$(filter gnrc_icmpv6,$(USEMODULE)))
     DIRS += network_layer/icmpv6
 endif
