--- a/boards/cc3200-launchxl/Makefile.include
+++ b/boards/cc3200-launchxl/Makefile.include
@@ -2,6 +2,10 @@
 export CPU        = cc3200
 # export CPU_MODEL ?= cc3200
 
+ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
+	USEMODULE += cc110x gnrc_netdev2 gnrc_cc110x
+endif
+
 # setup serial terminal
 export PORT      ?= /dev/ttyUSB1
 include $(RIOTBOARD)/Makefile.include.serial
