--- a/examples/default/Makefile
+++ b/examples/default/Makefile
@@ -36,7 +36,7 @@ USEMODULE += config
 
 BOARD_PROVIDES_NETIF := airfy-beacon fox iotlab-m3 mulle native nrf51dongle \
 	nrf6310 pba-d-01-kw2x pca10000 pca10005 saml21-xpro samr21-xpro spark-core \
-	yunjia-nrf51822
+	yunjia-nrf51822 cc3200-launchxl
 
 ifneq (,$(filter $(BOARD),$(BOARD_PROVIDES_NETIF)))
   # Use modules for networking
