msp430-elf-gcc initial port

--- a/boards/Makefile.include.msp430_common
+++ b/boards/Makefile.include.msp430_common
@@ -1,5 +1,5 @@
 # default toolchain prefix
-export PREFIX ?= msp430-
+export PREFIX ?= msp430-elf-
 
 # define build specific options
 CFLAGS_CPU   = -mmcu=$(CPU_MODEL)
