--- a/Makefile.dep
+++ b/Makefile.dep
@@ -7,7 +7,7 @@ endif
 
 ifneq (,$(filter nhdp,$(USEMODULE)))
   USEMODULE += conn_udp
-  USEMODULE += vtimer
+  USEMODULE += xtimer
   USEMODULE += oonf_rfc5444
 endif
 
