--- a/boards/telosb/Makefile.include
+++ b/boards/telosb/Makefile.include
@@ -2,6 +2,9 @@
 export CPU = msp430fxyz
 export CPU_MODEL = msp430f1611
 
+ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
+    USEMODULE += cc2420
+endif
 # set default port depending on operating system
 PORT_LINUX ?= /dev/ttyUSB0
 PORT_DARWIN ?= $(shell ls -1 /dev/tty.SLAB_USBtoUART* | head -n 1)
