--- a/Makefile.pseudomodules
+++ b/Makefile.pseudomodules
@@ -2,6 +2,7 @@ PSEUDOMODULES += conn
 PSEUDOMODULES += conn_ip
 PSEUDOMODULES += conn_tcp
 PSEUDOMODULES += conn_udp
+PSEUDOMODULES += entropy
 PSEUDOMODULES += gnrc_netif_default
 PSEUDOMODULES += gnrc_ipv6_default
 PSEUDOMODULES += gnrc_ipv6_router
