Add flash emulation layer for native
[flashsim] Fix broken unit tests

[flashsim] Add documentation

[flashsim] Properly namespace error enum

[flashsim] Fix header not renamed

[fs] replace custom error codes with errnos

--- a/sys/Makefile
+++ b/sys/Makefile
@@ -67,6 +67,9 @@ endif
 ifneq (,$(filter udp,$(USEMODULE)))
     DIRS += net/transport_layer/udp
 endif
+ifneq (,$(filter flash_sim,$(USEMODULE)))
+    DIRS += storage/flash_sim
+endif
 
 ifneq (,$(filter hamming256,$(USEMODULE)))
     DIRS += ecc/hamming256
