--- a/boards/xmc-2go/Makefile.features
+++ b/boards/xmc-2go/Makefile.features
@@ -1,5 +1,4 @@
-FEATURES_MCU_GROUP = cortex_m0
-FEATURES_PROVIDED += cpp
+# Put defined MCU peripherals here (in alphabetical order)
 FEATURES_PROVIDED += periph_adc
 FEATURES_PROVIDED += periph_cpuid
 FEATURES_PROVIDED += periph_gpio
@@ -8,3 +7,9 @@ FEATURES_PROVIDED += periph_rtc
 FEATURES_PROVIDED += periph_spi
 FEATURES_PROVIDED += periph_timer
 FEATURES_PROVIDED += periph_uart
+
+# Various other features (if any)
+FEATURES_PROVIDED += cpp
+
+# The board MPU family (used for grouping by the CI system)
+FEATURES_MCU_GROUP = cortex_m0
