make: prng modules require random header

--- a/Makefile.dep
+++ b/Makefile.dep
@@ -406,3 +406,7 @@ endif
 ifneq (,$(filter phydat,$(USEMODULE)))
   USEMODULE += fmt
 endif
+
+ifneq (,$(filter prng_%,$(USEMODULE)))
+  USEMODULE += random 
+endif
