Dlasze próby znalezienia błędu...

--- a/tests/gnrc_networking_cc110x/Makefile
+++ b/tests/gnrc_networking_cc110x/Makefile
@@ -11,7 +11,6 @@ BOARD_INSUFFICIENT_MEMORY := airfy-beacon chronos msb-430 msb-430h nrf51dongle \
                           nrf6310 nucleo-f334 pca10000 pca10005 spark-core \
                           stm32f0discovery telosb weio wsn430-v1_3b wsn430-v1_4 \
                           yunjia-nrf51822 z1
-                                   
 # Include packages that pull up and auto-init the link layer.
 # NOTE: 6LoWPAN will be included if IEEE802.15.4 devices are present
 USEMODULE += gnrc_netif_default
@@ -30,13 +29,13 @@ USEMODULE += shell
 USEMODULE += shell_commands
 USEMODULE += ps
 
-ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
-    USEMODULE += cc110x gnrc_netdev2 gnrc_cc110x
-endif
+#ifneq (,$(filter gnrc_netif_default,$(USEMODULE)))
+#    USEMODULE += cc110x gnrc_netdev2 gnrc_cc110x
+#endif
 
-ifneq (,$(filter cc110x,$(USEMODULE)))
-    DISABLE_MODULE += gnrc_sixlowpan_iphc
-endif
+#ifneq (,$(filter cc110x,$(USEMODULE)))
+#    DISABLE_MODULE += gnrc_sixlowpan_iphc
+#endif
 
 # Comment this out to disable code in RIOT that does safety checking
 # which is not needed in a production environment but helps in the
