ccn-lite example: use TLSF

--- a/examples/ccn-lite-relay/Makefile
+++ b/examples/ccn-lite-relay/Makefile
@@ -33,6 +33,11 @@ USEMODULE += xtimer
 USEMODULE += random
 USEMODULE += prng_minstd
 
+
+ifneq (,$(filter-out native,$(BOARD)))
+	USEPKG += tlsf
+endif
+
 USEPKG += ccn-lite
 USEMODULE += ccn-lite-utils
 
