Rename 'openmote' board in-tree to 'openmote-cc2538', to avoid ambiguity with future versions of the OpenMote platform.

--- a/boards/openmote-cc2538/Makefile.include
+++ b/boards/openmote-cc2538/Makefile.include
@@ -1,4 +1,4 @@
-# define the cpu used by the OpenMote board
+# define the cpu used by the OpenMote-cc2538 board
 export CPU = cc2538
 export CPU_MODEL = cc2538sf53
 
