Rename 'openmote' board in-tree to 'openmote-cc2538', to avoid ambiguity with future versions of the OpenMote platform.

--- a/tests/pkg_cmsis-dsp/Makefile
+++ b/tests/pkg_cmsis-dsp/Makefile
@@ -19,7 +19,7 @@ BOARD_WHITELIST := \
   nucleo-f334 \
   nucleo-f401 \
   nucleo-l1 \
-  openmote \
+  openmote-cc2538 \
   pba-d-01-kw2x \
   pca10000 \
   pca10005 \
