make: add remote packages / "package management"
This PR is meant to replace the current `USE_PKG` system.
Instead with `REMOTE_PKG` a new option added to load decentralized
modules, that could live in some Git project, a local folder or some
similar place.
The PR is inspired by package managers such as pip or npm.

In your project's Makefile you could add a line such as

```Makefile
REMOTE_PKG += some_module
```

which would clone `https://github.com/RIOT-OS/some_module.git`, checkout
it's `master`. The revision can be overridden, too: `some_module@devel`
or `some_module@1234ab`.
If `https://github.com/RIOT-OS/` is the right place for such modules is
subject for discussions.

The allow further decentralization, you can add another Git remote URL:

```Makefile
REMOTE_PKG += git+http://repos.example.com/some_module.git
REMOTE_PKG += git+my_account@repos.example.com:some_module.git
```

also with the option to add a revision / branch / tag.

Last but not least you can add local paths:

```Makefile
REMOTE_PKG += ./../modules/some_module
REMOTE_PKG += /usr/local/shared/riot-modules/some_module
REMOTE_PKG += local+C:/User/Default/Documents/riot-modules/some_module
```

but of course without a revision.

Adding options for Mercurial, Bazaar, SVN, something, would be trivial.

The checked out project needs to contain an executable file
`./riot-pkg`, which prints lines to STDOUT with are included in the
Makefile. The easiest and probably most common `riot-pkg` will contain:

```sh
\#!/bin/sh
echo "DIRS += $(dirname "$(readlink -f "$0")")"
echo "USEMODULE += some_module"
```

More complicated `riot-pkg`s will download remote data, apply patches or
do similar setup tasks.

The advantage of the proposed system over the current `USEPKG` system is
that everybody who's interested could easily share RIOT modules without
us needed to "approve" it. Library authors might find it easier to
contribute to RIOT because sharing the library is done effectively
immediately after they pushed

--- a/Makefile.include
+++ b/Makefile.include
@@ -189,6 +189,16 @@ else
 export CFLAGS += -DRIOT_VERSION=\"$(RIOT_VERSION)\"
 endif
 
+# include definitions for remote packages
+$(BINDIR)Makefile.remote-pkg:
+	@mkdir -p $(@D)
+	$(AD)$(RIOTBASE)/dist/remote-pkg/remote-pkg.py < /dev/null > $@
+
+ifneq (, $(REMOTE_PKG))
+  export REMOTE_PKG
+  -include $(BINDIR)Makefile.remote-pkg
+endif
+
 # the binaries to link
 BASELIBS += $(BINDIR)${APPLICATION}.a
 BASELIBS += $(USEPKG:%=${BINDIR}%.a)
