Test for driver_cc112x still not working.

--- a/tests/gnrc_networking_cc112x/Makefile
+++ b/tests/gnrc_networking_cc112x/Makefile
@@ -1,6 +1,8 @@
 # name of your application
 APPLICATION = gnrc_networking
 
+USEMODULE_INCLUDES += $(RIOTBASE)/drivers/cc112x/include
+
 # If no BOARD is found in the environment, use this default:
 BOARD ?= native
 
