--- a/cpu/cc2538/Makefile
+++ b/cpu/cc2538/Makefile
@@ -4,4 +4,8 @@ MODULE = cpu
 # Add a list of subdirectories, that should also be built:
 DIRS = periph $(RIOTCPU)/cortexm_common
 
+ifneq (,$(filter cc2538,$(USEMODULE)))
+        DIRS += radio
+endif
+
 include $(RIOTBASE)/Makefile.base
